1.1.0, YYYY-MM-DD
-----------------

- New functions
 - PC_PCId(pcpoint|pcpatch)
 - PC_Get(pcpoint) returns float8[]
 - PC_Summary(pcpatch)
 - PC_Patch{Min,Max,Avg}(pcpatch) returns pcpoint (#77)
 - PC_Upgrade([<target_version>])
 - PC_Lib_Version(), PC_Script_Version() (#40)
- Enhancements
 - Support sigbits encoding for 64bit integers (#61)
 - Warn about truncated values (#68)
 - Warn about script/lib version mismatch (#40)
 - Compatibility with PostgreSQL 9.5 (#90)
 - Support LAZ compression for PcPatch (#105)

1.0.1, 2015-08-09
-----------------

- Bug fixes
  - #79, Fix PC_Filter stats computation with dimensionally-compressed
    patches
  - #78, Fix PC_Filter stats computation with scaled dimensions
  - #71, Fix crash in pc_schema_from_xml
  - #66, Fix crash in pc_schema_clone (unexploitable via SQL)
  - #37, Fix access to uninitialized variables
  - #31, Fix crash in pc_patch
  - #28, Fix uninterruptible loop from pc_schemaisvalid
  - #27, Fix pointcloud_columns view definition to handle
    null-typmoded cols
  - #23, Fix computation of dimensional patch extent
  - #26, Fix cmake build with GCC 4.8 (-fPIC)

- Enhancements
  - #39, Provide upgrade scripts

1.0.0
-----

Initial release, also known as:
  - 0.1.0 (git tag v0.1.0)
  - 1.0 (extension script filename)
