@@ -301,6 +301,10 @@ CREATE OR REPLACE FUNCTION PC_PointN(p pcpatch, n int4)
     RETURNS pcpoint AS 'MODULE_PATHNAME', 'pcpatch_pointn'
     LANGUAGE 'c' IMMUTABLE STRICT;
 
+CREATE OR REPLACE FUNCTION PC_Range(p pcpatch, first int4, count int4)
+    RETURNS pcpatch AS 'MODULE_PATHNAME', 'pcpatch_range'
+    LANGUAGE 'c' IMMUTABLE STRICT;
+
 -------------------------------------------------------------------
 --  POINTCLOUD_COLUMNS
 -------------------------------------------------------------------
